feat: UnitTest of BirthRound Ancient Mode (#11560) (#19252)
Signed-off-by: mxtartaglia <maxi@swirldslabs.com>